[package]
name = "rqlite_engine"
version = "0.1.0"
edition = "2021"
description = "A SQLite-compatible storage engine implementatio in Rust"
authors = ["Your Name <raul.moldes.work@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/RaulMoldes/rqlite"

[dependencies]
rustfmt = "0.10.0"
# No external dependencies 

[dev-dependencies]
tempfile = "3.6.0"  # For temporary files in tests

[[example]]
name = "simple_database"
path = "examples/simple_database.rs"
